--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,8 +1,9 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@article{wu2022development,
+  title={Development and validation of interactive creativity task platform},
+  author={Wu, Ching-Lin and Su, Yu-Der and Chen, Eason and Chen, Pei-Zhen and Chang, Yu-Lin and Chen, Hsueh-Chih},
+  journal={Frontiers in Psychology},
+  volume={13},
+  pages={954946},
+  year={2022},
+  publisher={Frontiers}
 }
